# letscountit

./: .pre-commit-config.yaml  Dockerfile  Readme.md  poetry.toml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pylint.yml  python-app.yml
api/: api.py
app/: main.py
dbschema/: default.esdl
dbschema/migrations/: 00001-m1g7jx5.edgeql  00002-m1rf4gu.edgeql  00003-m14jpzc.edgeql  00004-m1yokw6.edgeql
letscountit/: api.py  base.py  logo.py
letscountit/db/: db.py  edgedb.py
letscountit/tests/: conftest.py  docker-compose.yml  test_base.py  test_database.py  test_edgedb.py  test_fastapi.py  test_logo.py
tests/: test_base.py  test_logo.py
